adding a poll works\!

--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -3,6 +3,7 @@
 <div ng-hide="poll">
 
     <label>Title</label>
-    <input ng-model="poll.title" />
+    <input ng-model="pollNew.title" />
     <button class="btn btn-info" ng-click="startNewPoll()">Start</button>
 </div>
+
