ending poll by using api, but I think the api doesn't work correctly

--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -1,9 +1,17 @@
 <div ng-include="'partials/navbar'"></div>
 
-<div ng-hide="poll">
+<div class="poll-new" ng-hide="poll">
 
+    <h2>Create a New Poll</h2>
     <label>Title</label>
     <input ng-model="pollNew.title" />
     <button class="btn btn-info" ng-click="startNewPoll()">Start</button>
 </div>
 
+<div class="poll-existing" ng-show="poll">
+
+    <h2>Active Poll</h2>
+    <h3>{{ poll.title}}</h3>
+    <button class="btn btn-danger" ng-click="endPoll()">End</button>
+
+</div>
