changed student page

--- a/app/views/partials/students.html
+++ b/app/views/partials/students.html
@@ -1,11 +1,13 @@
 <div ng-include="'partials/navbar'"></div>
-<h4>Students</h4>
-<div class="form-group">
-    <input class="form-control" placeholder="New student name" ng-model="newStudent.name">
-    <button style="margin-top: 10px;" class="btn btn-sm btn-success" ng-click="addStudent()">Add student</button>
+<div ng-hide="currentStudent">
+	<h4>Students</h4>
+	<div class="form-group">
+	    <input class="form-control" placeholder="New student name" ng-model="newStudent.name">
+	    <button style="margin-top: 10px;" class="btn btn-sm btn-success" ng-click="addStudent()">Add student</button>
+	</div>
+
+	<div class="row marketing">
+	  <button ng-click="selectStudent(student)" class="btn btn-info" style="display: block; margin-bottom: 10px;" ng-repeat="student in students">{{student.name}}</button>
+	</div>
 </div>
-<div class="row marketing">
-    <ul>
-        <li ng-repeat="student in students">{{student.name}}</li>
-    </ul>
-</div>
+	<div>{{currentStudent.name}}</div>
