live time showing how long the poll has been running

--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -12,6 +12,7 @@
 
     <h2>Active Poll</h2>
     <h3>{{ poll.title}}</h3>
+    <h4>Started: {{ poll.momentFromNow }}</h4>
     <button class="btn btn-danger" ng-click="endPoll()">End</button>
 
 </div>
