--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -11,7 +11,10 @@
         <h2>Active Poll</h2>
         <h3>{{ poll.title }}</h3>
         <h4>Started: {{ poll.momentFromNow }}</h4>
-        <h4>number of actions: {{ poll.actions.length }}</h4>
+        <h4>States:</h4>
+        <ul ng-repeat="(state, count) in poll.actions.states">
+            <li>{{ state }}: {{ count }}</li>
+        </ul>
         <button class="btn btn-danger" ng-click="endPoll()">End</button>
     </div>  
 </div>
