--- a/app/views/partials/students.html
+++ b/app/views/partials/students.html
@@ -18,9 +18,9 @@
         <div>{{currentStudent.name}}</div>
         <div>{{currentPoll.title}}</div>
 
-        <button class="btn btn-alert" ng-disabled="disableClick" ng-click="sendAction('WTF is this?!')">Slow Down</button>
+        <button class="btn btn-alert" ng-disabled="disableClick" ng-click="sendAction(2)">Slow Down</button>
         <div class="current-state">{{currentState}}</div>
-        <button class="btn btn-info" ng-disabled="disableClick" ng-click="sendAction('I am Bored!')">Speed Up</button>
+        <button class="btn btn-info" ng-disabled="disableClick" ng-click="sendAction(1)">Speed Up</button>
 
     </div>
     
