--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -12,7 +12,7 @@
         <h3>{{ poll.title }}</h3>
         <h4>Started: {{ poll.momentFromNow }}</h4>
         <h4>States:</h4>
-        <ul ng-repeat="(state, count) in poll.actions.states">
+        <ul ng-repeat="(state, count) in states">
             <li>{{ state }}: {{ count }}</li>
         </ul>
         <button class="btn btn-danger" ng-click="endPoll()">End</button>
