--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -1,5 +1,5 @@
 <div ng-include="'partials/navbar'"></div>
-<div ng-hide="questionMode" >
+<div ng-show="mode === 0">
     <div class="poll-new" ng-hide="poll">
         <h2>Create a New Poll</h2>
         <label>Title</label>
@@ -18,5 +18,18 @@
         <button class="btn btn-danger" ng-click="endPoll()">End</button>
     </div>  
 </div>
-<div ng-show="questionMode" ng-include="partials/question-mode-teacher.html">
+<div ng-show="mode === 1">
+    <table class="table table-striped">
+        <tr ng-repeat="question in questions" ng-click="selectQuestion(question)">
+            <td>{{ question.text }}</td>
+            <td><button class="btn btn-small btn-info" ng-click="pushQuestion(question)" ng-show="question.selected">Push</button></td>
+        </tr>
+    </table>
+</div>
+<div ng-show="mode === 2">
+    <!-- TODO: results go here-->
+</div>
+<div class="row marketing">
+    <button class="btn btn-large btn-info pull-left" ng-click="startQuestionMode()">Assesment</button>
+    <button class="btn btn-large btn-info pull-right" ng-click="stopQuestionMode()">Return</button>
 </div>
