--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -4,5 +4,5 @@
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
     </ul>
-    <h3 class="text-muted">In-Gauge</h3>
+    <img src="images/inGauge_Logo.png" alt="inGauge Logo" title="inGauge">
 </div>
