--- a/app/views/partials/students.html
+++ b/app/views/partials/students.html
@@ -14,14 +14,24 @@
     <div ng-hide="currentPoll">
         Waiting for teacher to start.
     </div>
-    <div ng-show="currentPoll">
-        <div>{{currentStudent.name}}</div>
-        <div>{{currentPoll.title}}</div>
+    <div ng-show="currentPoll" class="row">
+        <div class="col-md-2">
+            <div>{{currentStudent.name}}</div>
+            <div>{{currentPoll.title}}</div>
 
-        <button class="btn btn-alert" ng-disabled="disableClick" ng-click="sendAction(2)">Slow Down</button>
-        <div class="current-state">{{currentState}}</div>
-        <button class="btn btn-info" ng-disabled="disableClick" ng-click="sendAction(1)">Speed Up</button>
+            <button class="btn btn-alert" ng-disabled="disableClick" ng-click="sendAction(2)">Slow Down</button>
+            <div class="current-state">{{currentState}}</div>
+            <button class="btn btn-info" ng-disabled="disableClick" ng-click="sendAction(1)">Speed Up</button>
+        </div>
 
+        <div ng-show="assessment" class="col-md-10">
+            <h2>Teacher Question</h2>
+            <h3>{{ assessment.question.text }}</h3>
+            <table class="table">
+                <tr ng-repeat="answer in assessment.question.answers" ng-click="assessmentAnswerSelect($index)">
+                    <td>{{ answer.text }} <span ng-show="answer.selected"><- You clicked that one</span></td>
+                </tr>
+            </table>
+        </div>
     </div>
-    
 </div>
