only show return button on assessment mode

--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -37,5 +37,5 @@
 </div>
 <div class="row marketing">
     <button class="btn btn-large btn-info pull-left" ng-click="startQuestionMode()">Assesment</button>
-    <button class="btn btn-large btn-info pull-right" ng-click="returnToPolling()">Return</button>
+    <button class="btn btn-large btn-info pull-right" ng-click="returnToPolling()" ng-show="mode === 1">Return</button>
 </div>
