--- a/app/views/partials/students.html
+++ b/app/views/partials/students.html
@@ -30,7 +30,7 @@
         <table class="table table-striped">
             <tr ng-repeat="answer in assessment.question.answers" ng-click="assessmentAnswerSelect(answer)">
                 <td>{{ answer.text }}</td>
-                <td><button class="btn btn-small btn-info" ng-click="assessmentAnswerSubmit()" ng-show="answer === assessmentAnswerSelected">Push</button></td>
+                <td><button class="btn btn-small btn-info" ng-click="assessmentAnswerSubmit(answer)" ng-show="answer === assessmentAnswerSelected">Push</button></td>
             </tr>
         </table>
     </div>
