placeholder page for reports

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -71,6 +71,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/dashboard.js"></script>
         <script src="scripts/controllers/students.js"></script>
+        <script src="scripts/controllers/reports.js"></script>
         <!-- endbuild -->
 </body>
 </html>
