linked the navbar logo

--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -4,5 +4,5 @@
             <a ng-href="{{item.link}}">{{item.title}}</a>
         </li>
     </ul>
-    <img src="images/inGauge_Logo.png" alt="inGauge Logo" title="inGauge">
+    <a href="/"><img src="images/inGauge_Logo.png" alt="inGauge Logo" title="inGauge"></a>
 </div>
