made the header a little bit less broken on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,6 +15,7 @@ body {
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
+  overflow: auto;
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
