--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -93,3 +93,9 @@ body {
   color: black;
   background-color: #cccccc;
 }
+
+.btn-info {
+  color: #ffffff;
+  background-color: #ff6633;
+  border-color: #ff6633;
+}
