adding assessment result and fixing bug

--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -29,6 +29,7 @@
 </div>
 <div ng-show="mode === 2">
     <div ng-show="assessmentResults">
+        {{assessmentResults}}
         <!-- TODO: results go here-->
     </div>
     <div ng-hide="assessmentResults">
