--- a/app/views/partials/students.html
+++ b/app/views/partials/students.html
@@ -24,7 +24,7 @@
 
         
     </div>
-    <div ng-show="mode === 2" class="col-md-10">
+    <div ng-show="currentStudent && mode === 2" class="col-md-10">
         <h2>Teacher Question</h2>
         <h3>{{ assessment.question.text }}</h3>
         <table class="table table-striped">
