working results page

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -88,6 +88,10 @@ body {
   border-color: #ff6633;
 }
 
+.correct {
+    background-color: cyan;
+}
+
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
