--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -56,5 +56,5 @@
 <div class="row marketing">
     <button class="btn btn-large btn-info pull-left" ng-click="startQuestionMode()" ng-hide="mode !== 0">Assessment</button>
     <button class="btn btn-large btn-info center-block" ng-click="startFeedback()" ng-hide="mode !== 0">Feedback</button>
-    <button class="btn btn-large btn-info pull-right" ng-click="returnToPolling()"ng-hide="mode === 0">Return</button>
+    <button class="btn btn-large btn-info pull-right" ng-click="returnToPolling()" ng-hide="mode === 0 || mode === 3">Return</button>
 </div>
