--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -12,10 +12,12 @@
         <h3>{{ poll.title }}</h3>
         <h4>Started: {{ poll.momentFromNow }}</h4>
         <h4>States:</h4>
-        <div class="states">
+        <div class="states_2">
           <span style="color: red;" ng-style="{opacity: states[2]}">{{ 100 * states[2] }}%</span>
-          <span style="color: green;" ng-style="{opacity: states[1]}">{{ 100 * states[1] }}%</span>
         </div>
+        <div class="states_1">
+          <span style="color: green;" ng-style="{opacity: states[1]}">{{ 100 * states[1] }}%</span>
+        </div>    
         <button class="btn btn-danger" ng-click="endPoll()">End</button>
     </div>  
 </div>
