--- a/app/views/partials/students.html
+++ b/app/views/partials/students.html
@@ -34,6 +34,6 @@
     <div class="form-group message" ng-show="mode === 3">
         <h2>Any Questions?</h2>
         <input class="form-control" type="text" ng-model="message" />
-        <button class="btn btn-success btn-sm" ng-click="messageSubmit">Send</button>
+        <button class="btn btn-success btn-sm" ng-click="messageSubmit(message)">Send</button>
     </div>
 </div>
