--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,5 +1,5 @@
 <div class="header" ng-controller="NavbarCtrl">
-    <a href="/"><img src="images/inGauge_Logo.png" alt="inGauge Logo" title="inGauge"></a>
+    <a href="/"><img src="images/inGauge_Logo.png" alt="inGauge Logo" style="height: 41px;" title="inGauge"></a>
     <ul class="nav nav-pills pull-right">
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
