--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,6 +20,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.custom.css">
     <!-- endbuild -->
   </head>
   <body ng-app="sweduphxApp">
