--- a/app/views/partials/students.html
+++ b/app/views/partials/students.html
@@ -6,7 +6,7 @@
 	    <button class="btn btn-sm btn-success" ng-click="addStudent()">Add student</button>
 	</div>
 
-	<div class="row marketing">
+	<div class="form-group">
 	  <button ng-click="selectStudent(student)" class="btn btn-info" style="display: block; margin-bottom: 10px;" ng-repeat="student in students">{{student.name}}</button>
 	</div>
 </div>
