--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -1,31 +1,37 @@
 <div ng-include="'partials/navbar'"></div>
+<div style="margin: 20px 0;" class="form-group">
+    <button class="btn btn-large btn-info pull-left" ng-click="startQuestionMode()" ng-hide="mode !== 0">Assessment</button>
+    <button class="btn btn-large btn-info pull-right" ng-click="startFeedback()" ng-hide="mode !== 0">Feedback</button>
+    <button class="btn btn-large btn-info pull-right" ng-click="returnToPolling()" ng-hide="mode === 0 || mode === 3">Return</button>
+    <div style="clear: both"></div>
+</div>
 <div ng-show="mode === 0">
-    <div class="poll-new" ng-hide="poll">
-        <h2>Create a New Poll</h2>
-        <label>Title</label>
-        <input ng-model="pollNew.title" />
-        <button class="btn btn-info" ng-click="startNewPoll()">Start</button>
+    <div class="form-group poll-new" ng-hide="poll">
+        <h2>Create a new Session</h2>
+        <input style="height: 30px;position: relative;top: 1px;" placeholder="Title" ng-model="pollNew.title" />
+        <button class="btn btn-sm btn-info" ng-click="startNewPoll()">Start</button>
     </div>
 
-    <div class="poll-existing" ng-show="poll">
-        <h2>Active Poll</h2>
+    <div class="form-group poll-existing" ng-show="poll">
+        <h2 style="display: inline;position: relative;top: 7px;">Active Poll</h2>
+        <button style="margin-left: 30px;" class="btn btn-sm btn-warning" ng-click="endPoll()">End</button>
         <h3>{{ poll.title }}</h3>
         <h4>Started: {{ poll.momentFromNow }}</h4>
-        <h4>States:</h4>
-        <div class="states_2">
-          <span style="color: red;" ng-style="{opacity: states[2]}">{{ 100 * states[2] }}%</span>
+        <h4>Class Engagement:</h4>
+        <div class="states_2" ng-class="{'fade-in': states[2]}">
+          <span>{{ 100 * states[2] }}%</span>
         </div>
-        <div class="states_1">
-          <span style="color: green;" ng-style="{opacity: states[1]}">{{ 100 * states[1] }}%</span>
-        </div>    
-        <button class="btn btn-warning" ng-click="endPoll()">End</button>
+        <div class="states_1" ng-class="{'fade-in': states[1]}">
+          <span>{{ 100 * states[1] }}%</span>
+        </div>
     </div>  
 </div>
 <div ng-show="mode === 1">
+    <h3>Select an assessment:</h3>
     <table class="table table-striped">
         <tr ng-repeat="question in questions" ng-click="selectQuestion(question)">
             <td>{{ question.text }}</td>
-            <td><button class="btn btn-small btn-info" ng-click="startAssessment(question)" ng-show="question.selected">Push</button></td>
+            <td style="padding: 3px;"><button class="btn btn-xs btn-info" ng-click="startAssessment(question)" ng-show="question.selected">Submit</button></td>
         </tr>
     </table>
 </div>
@@ -54,10 +60,5 @@
     <div ng-hide="feedbackResults">
         Waiting for Results...
     </div>
-    <button class="btn btn-warning" ng-click="endFeedback()">End</button>
-</div>
-<div class="class="form-group">
-    <button class="btn btn-large btn-info pull-left" ng-click="startQuestionMode()" ng-hide="mode !== 0">Assessment</button>
-    <button class="btn btn-large btn-info center-block" ng-click="startFeedback()" ng-hide="mode !== 0">Feedback</button>
-    <button class="btn btn-large btn-info pull-right" ng-click="returnToPolling()" ng-hide="mode === 0 || mode === 3">Return</button>
+    <button style="margin-top: 20px;" class="btn btn-warning" ng-click="endFeedback()">End</button>
 </div>
