--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -1,5 +1,6 @@
 <div class="header" ng-controller="NavbarCtrl">
-    <a href="/"><img src="images/inGauge_Logo.png" alt="inGauge Logo" style="height: 41px;" title="inGauge"></a>
+    <a class="navbar-brand hidden-xs" href="/" style="padding: 0;"><img src="images/inGauge_Logo.png" alt="inGauge Logo" style="height: 41px;" title="inGauge"></a>
+    <a class="navbar-brand visible-xs" href="/" style="padding: 0;"><img src="images/inGauge_Logo.png" alt="inGauge Logo" style="height: 25px;width: 80px;position: relative;right: 15px;" title="inGauge"></a>
     <ul class="nav nav-pills pull-right">
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
