--- a/app/views/partials/students.html
+++ b/app/views/partials/students.html
@@ -5,29 +5,30 @@
 	    <input class="form-control" placeholder="New student name" ng-model="newStudent.name">
 	    <button class="btn btn-sm btn-success" ng-click="addStudent()">Add student</button>
 	</div>
-
-	<div class="form-group">
-	  <button ng-click="selectStudent(student)" class="btn btn-info" style="display: block; margin-bottom: 10px;" ng-repeat="student in students">{{student.name}}</button>
-	</div>
+    <button ng-click="selectStudent(student)" class="btn btn-info" style="margin: 10px 20px 10px 0px" ng-repeat="student in students">{{student.name}}</button>
 </div>
-<div ng-show="currentStudent">
-    <div ng-show="mode === 0">
-        Waiting for teacher to start.
+<div class="form-group" ng-show="currentStudent">
+    <div class="form-group" style="text-align: center; margin-top: 30px;" ng-show="mode === 0">
+        Waiting for teacher to start...
+        <img src="images/loader.gif" style="display: block; margin: 20px auto;" />
     </div>
-    <div ng-show="mode === 1" class="row">
-        <div>{{currentStudent.name}}</div>
-        <div>{{currentPoll.title}}</div>
-        <button class="btn btn-alert" ng-disabled="disableClick" ng-click="sendAction(2)">Slow Down</button>
-        <div class="current-state">{{currentState}}</div>
-        <button class="btn btn-info" ng-disabled="disableClick" ng-click="sendAction(1)">Speed Up</button>
+    <div style="margin: 10px auto;max-width: 300px;" class="form-group" ng-show="mode === 1">
+        <label style="font-size: 18px;" class="label-success" for="student-name">Student:</label>
+        <span id="student-name">{{currentStudent.name}}</span>
+        <div class="form-group">
+            <label style="font-size: 18px;" class="label-success" for="session-name">Session:</label>
+            <span id="session-name">{{currentPoll.title}}</span>
+        </div>
+        <button class="btn btn-warning btn-block" ng-disabled="disableClick" ng-click="sendAction(2)">Slow Down</button>
+        <button class="btn btn-info btn-block" ng-disabled="disableClick" ng-click="sendAction(1)">Speed Up</button>
     </div>
-    <div ng-show="mode === 2" class="col-md-10">
+    <div  class="form-group" ng-show="mode === 2" class="col-md-10">
         <h2>Teacher Question</h2>
         <h3>{{ assessment.question.text }}</h3>
         <table class="table table-striped">
             <tr ng-repeat="answer in assessment.question.answers" ng-click="assessmentAnswerSelect(answer)">
                 <td>{{ answer.text }}</td>
-                <td><button class="btn btn-small btn-info" ng-click="assessmentAnswerSubmit(answer)" ng-show="answer === assessmentAnswerSelected">Push</button></td>
+                <td style="padding: 3px;"><button class="btn btn-xs btn-info" ng-click="assessmentAnswerSubmit(answer)" ng-show="answer === assessmentAnswerSelected">Submit</button></td>
             </tr>
         </table>
     </div>
