--- a/app/views/index.html
+++ b/app/views/index.html
@@ -66,6 +66,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <script src="scripts/angular-ui.min.js"></script>
+    <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
