--- a/app/views/partials/reports.html
+++ b/app/views/partials/reports.html
@@ -1,3 +1,5 @@
 <div ng-include="'partials/navbar'"></div>
+<div id="container3" style="min-width: 310px; height: 400px; margin: 20px auto"></div>
+<div id="container" style="min-width: 310px; height: 400px; margin: 20px auto"></div>
+<div id="container2" style="min-width: 310px; height: 400px; margin: 20px auto"></div>
 
-<h2>Mad data goes here</h2>
