--- a/app/views/index.html
+++ b/app/views/index.html
@@ -47,7 +47,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script src="scripts/socket.io.min.js"></script>
+    <script src="bower_components/socket.io-client/dist/socket.io.min.js"></script>
     <!-- build:js(app) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -65,7 +65,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-    <script src="scripts/angular-ui.min.js"></script>
+    <script src="bower_components/angular-ui/build/angular-ui.min.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
