--- a/app/views/partials/dashboard.html
+++ b/app/views/partials/dashboard.html
@@ -19,10 +19,10 @@
         <h4>Started: {{ poll.momentFromNow }}</h4>
         <h4>Class Engagement:</h4>
         <div class="states_2" ng-class="{'fade-in': states[2]}">
-          <span>{{ 100 * states[2] }}%</span>
+          <span>{{ getPercent(states[2]) }}%</span>
         </div>
         <div class="states_1" ng-class="{'fade-in': states[1]}">
-          <span>{{ 100 * states[1] }}%</span>
+          <span>{{ getPercent(states[1]) }}%</span>
         </div>
     </div>  
 </div>
