--- a/app/views/partials/students.html
+++ b/app/views/partials/students.html
@@ -1,9 +1,9 @@
-<div ng-include="'partials/navbar'"></div>
+<div ng-hide="currentStudent" ng-include="'partials/navbar'"></div>
 <div ng-hide="currentStudent">
 	<h4>Students</h4>
 	<div class="form-group">
 	    <input class="form-control" placeholder="New student name" ng-model="newStudent.name">
-	    <button class="btn btn-sm btn-success" ng-click="addStudent()">Add student</button>
+	    <button style="margin-top: 10px;" class="btn btn-sm btn-success" ng-click="addStudent()">Add student</button>
 	</div>
     <button ng-click="selectStudent(student)" class="btn btn-info" style="margin: 10px 20px 10px 0px" ng-repeat="student in students">{{student.name}}</button>
 </div>
@@ -13,19 +13,20 @@
         <img src="images/loader.gif" style="display: block; margin: 20px auto;" />
     </div>
     <div style="margin: 10px auto;max-width: 300px;" class="form-group" ng-show="mode === 1">
-        <label style="font-size: 18px;padding: 3px" class="label-success" for="student-name">Student:</label>
-        <span id="student-name">{{currentStudent.name}}</span>
-        <div class="form-group">
-            <label style="font-size: 18px;padding: 3px" class="label-success" for="session-name">Session:</label>
+        <button class="btn btn-lg btn-warning btn-block" ng-disabled="disableClick" ng-click="sendAction(2)">Slow Down</button>
+        <button class="btn btn-lg btn-info btn-block" ng-disabled="disableClick" ng-click="sendAction(1)">Speed Up</button>
+
+        <div style="font-size: 12px;padding: 3px; text-align: center;" class="form-group">
+            <span for="student-name">Student:</span>
+            <span id="student-name">{{currentStudent.name}}</span>&nbsp;|
+            <span for="session-name">Session:</span>
             <span id="session-name">{{currentPoll.title}}</span>
         </div>
-        <button class="btn btn-warning btn-block" ng-disabled="disableClick" ng-click="sendAction(2)">Slow Down</button>
-        <button class="btn btn-info btn-block" ng-disabled="disableClick" ng-click="sendAction(1)">Speed Up</button>
     </div>
     <div  class="form-group" ng-show="mode === 2" class="col-md-10">
         <h2>Teacher Question</h2>
         <h3>{{ assessment.question.text }}</h3>
-        <table class="table table-striped">
+        <table class="table table-striped table-hover table-bordered table-responsive">
             <tr ng-repeat="answer in assessment.question.answers" ng-click="assessmentAnswerSelect(answer)">
                 <td>{{ answer.text }}</td>
                 <td style="padding: 3px;"><button class="btn btn-xs btn-info" ng-click="assessmentAnswerSubmit(answer)" ng-show="answer === assessmentAnswerSelected">Submit</button></td>
