fixing stupid build

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -94,7 +94,7 @@ body {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: black;
-  background-color: #cccccc;
+  background-color: #cccccc !important;
 }
 
 .states_1 {
