--- a/app/views/partials/student/index.html
+++ b/app/views/partials/student/index.html
@@ -8,13 +8,13 @@
     <button ng-click="selectStudent(student)" class="btn btn-info" style="margin: 10px 20px 10px 0px" ng-repeat="student in students">{{student.name}}</button>
 </div>
 <div class="form-group" ng-show="currentStudent">
-    <div class="form-group" style="text-align: center; margin-top: 30px;" ng-show="mode === 0">
+    <div class="form-group" style="text-align: center; margin-top: 30px;" ng-hide="mode === 0">
         Waiting for teacher to start...
-        <img src="images/loader.gif" style="display: block; margin: 20px auto;" />
+        <img src="../../../images/loader.gif" style="display: block; margin: 20px auto;" />
     </div>
     <div style="margin: 10px auto;max-width: 300px;" class="form-group" ng-show="mode === 1">
         <button style="height: 170px;" class="btn btn-lg btn-danger btn-block" ng-disabled="disableClick" ng-click="sendAction(2)">I don't get it</button>
-        <button style="height: 170px;" class="btn btn-lg btn-success btn-block" ng-disabled="disableClick" ng-click="sendAction(1)">Got it</button>
+        <button style="height: 170px;" class="btn btn-lg btn-success btn-block" ng-disabled="disableClick" ng-click="sendAction(1)">I Got it</button>
 
         <div style="font-size: 12px;padding: 3px; text-align: center;" class="form-group">
             <span for="student-name">Student:</span>
