--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/teacher/index.js"></script>
         <script src="scripts/controllers/student/index.js"></script>
         <script src="scripts/controllers/reports/index.js"></script>
