--- a/app/views/partials/register.html
+++ b/app/views/partials/register.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-<meta charset="UTF-8">
-<title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div ng-include="'partials/loginHeader'"></div>
+<div ng-controller="RegisterCtrl">
+    <form class="form-group" name="registerForm" style="margin-top: 40px;" ng-submit="register()">     
+        <div class="form-group">
+            <input class="form-control" required ng-model="user.firstName" type="text" name="firstName" placeholder="First Name" />
+        </div>
+        <div class="form-group">
+            <input class="form-control" required ng-model="user.lastName" type="text" name="lastName" placeholder="Last Name" />
+        </div>
+        <div class="form-group">
+            <input class="form-control" required ng-model="user.username" type="text" name="username" placeholder="Email Address" />
+        </div>
+        <div class="form-group">
+            <input class="form-control" required ng-model="user.password" type="password" name="password" placeholder="Password" />
+        </div>        
+        <div class="form-group">
+            <input class="form-control" required ng-model="confirm_password" type="password" name="confirm_password" placeholder="Confirm Password" />
+        </div>
+        <div class="form-group">
+            <input class="form-control btn btn-primary" type="submit" value="Register" />
+        </div>
+        <a href="/login/teacher" class="form-control btn btn-warning">Back</a>
+    </form>
+</div>
