--- a/app/views/partials/teacher/index.html
+++ b/app/views/partials/teacher/index.html
@@ -1,32 +1,18 @@
 <div ng-include="'partials/navbar'"></div>
-<div ng-show="mode === 0">
-    <div class="form-group poll-new" ng-hide="poll">
-        <h2>Create a new Session</h2>
-        <input style="height: 30px;position: relative;top: 1px;" placeholder="Title" ng-model="pollNew.title" />
-        <button class="btn btn-sm btn-info" ng-click="startNewPoll()">Start</button>
-    </div>
-    <div class="form-group poll-existing" ng-show="poll">
-        <h4>Class Engagement:</h4>
-        <div style="width: 100%; height: 250px; margin: 20px 0;">
-            <div class="states_2 pull-left" ng-class="{'fade-in': states[2]}">
-                <div>{{ getPercent(states[2]) }}%</div>
-            </div>
-            <div class="states_1 pull-right" ng-class="{'fade-in': states[1]}">
-                <div>{{ getPercent(states[1]) }}%</div>
-            </div>
-        </div>
-        <div style="clear: both;"></div>
-        <h2 style="display: inline;position: relative;top: 7px;">Active Poll: {{ poll.title }}</h2>
-        <button style="margin-left: 30px;" class="btn btn-sm btn-warning" ng-click="endPoll()">End</button>
-        <h4>Started: {{ poll.momentFromNow }}</h4>
-    </div>
+<div class="form-group session-new" ng-hide="session">
+    <h4>Create a new Session:</h4>
+    <input style="height: 30px;position: relative;top: 1px;" placeholder="Title" ng-model="newSessionTitle" />
+    <button class="btn btn-sm btn-info" ng-click="createSession()">Create</button>
 </div>
-<ng-include ng-show="mode === 1" src="'partials/teacher/assessment'"></ng-include>
-<ng-include ng-show="mode === 2" src="'partials/teacher/assessmentResults'"></ng-include>
-<ng-include ng-show="mode === 3" src="'partials/teacher/feedbackResults'"></ng-include>
-<div style="margin: 20px 0;" class="form-group btn-group pull-right">
-    <button class="btn btn-default" ng-click="startQuestionMode()" ng-hide="mode !== 0">Assessment</button>
-    <button class="btn btn-default" ng-click="startFeedback()" ng-hide="mode !== 0">Feedback</button>
-    <button class="btn btn-default" ng-click="returnToPolling()" ng-hide="mode === 0 || mode === 3">Return</button>
-    <div style="clear: both"></div>
-</div>
+<h4>Open Sessions:</h4>
+<table class="table table-bordered table-striped table-responsive table-hover">
+    <tr ng-repeat="session in sessions" >
+        <td>{{session.title}}</td>
+        <td>{{session.code}}</td>
+        <td ng-hide="session.start"><button ng-click="start(session)" class="btn btn-success btn-sm">Start</button></td>
+        <td ng-show="session.start && !session.end"><button ng-click="resume(session)" class="btn btn-success btn-sm">Resume</button></td>
+        <td ng-show="session.end">Ended: {{session.end}}</td>
+        <td><button ng-click="manage(session)" class="btn btn-info btn-sm">Manage</button></td>
+        <td><button ng-click="delete(session)" class="btn btn-danger btn-sm">Delete</button></td>
+    </tr>
+</table>
