cleanup and fixing jwt in api

--- a/app/views/partials/register.html
+++ b/app/views/partials/register.html
@@ -8,7 +8,7 @@
             <input class="form-control" required ng-model="user.lastName" type="text" name="lastName" placeholder="Last Name" />
         </div>
         <div class="form-group">
-            <input class="form-control" required ng-model="user.username" type="text" name="username" placeholder="Email Address" />
+            <input class="form-control" required ng-model="user.username" type="email" name="username" placeholder="Email Address" />
         </div>
         <div class="form-group">
             <input class="form-control" required ng-model="user.password" type="password" name="password" placeholder="Password" />
