--- a/app/views/partials/teacher/login.html
+++ b/app/views/partials/teacher/login.html
@@ -2,7 +2,7 @@
 <div ng-controller="TeacherLoginCtrl">
     <form class="form-group" style="margin-top: 40px;" ng-submit="login()">
         <div class="form-group">
-            <input class="form-control" ng-model="user.username" type="text" name="user" placeholder="Username" />
+            <input class="form-control" ng-model="user.username" type="email" name="user" placeholder="Username" />
         </div>
         <div class="form-group">
             <input class="form-control" ng-model="user.password" type="password" name="pass" placeholder="Password" />
