responsive nav bar for teacher and student added places to manage assessments and questions updated routes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -52,9 +52,9 @@
     <script src="bower_components/angular-socket-io/socket.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
-    <script src="http://code.highcharts.com/highcharts.js"></script>    
+    <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="bower_components/angular-ui/build/angular-ui.min.js"></script>
-
+    <script src="scripts/external/jwt-token.js"></script>
     <!-- endbuild -->
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
@@ -65,6 +65,8 @@
         <script src="scripts/controllers/teacher/index.js"></script>
         <script src="scripts/controllers/teacher/login.js"></script>
         <script src="scripts/controllers/teacher/session.js"></script>
+        <script src="scripts/controllers/teacher/assessments.js"></script>
+        <script src="scripts/controllers/teacher/assessmentDetail.js"></script>
         <script src="scripts/controllers/student/session.js"></script>
         <script src="scripts/controllers/student/login.js"></script>
         <script src="scripts/controllers/reports/index.js"></script>
