--- a/app/views/partials/teacher/index.html
+++ b/app/views/partials/teacher/index.html
@@ -1,5 +1,5 @@
 <div ng-include="'partials/navbar'"></div>
-<div class="form-group session-new" ng-hide="session">
+<div class="form-group session-new">
     <h4>Create a new Session:</h4>
     <input style="height: 30px;position: relative;top: 1px;" placeholder="Title" ng-model="newSessionTitle" />
     <button class="btn btn-sm btn-info" ng-click="createSession()">Create</button>
