--- a/app/views/partials/student/session.html
+++ b/app/views/partials/student/session.html
@@ -1,6 +1,5 @@
+<div ng-include="'partials/studentNavbar'"></div>
 <div class="form-group">
-    <a href="/logout" class="pull-right btn btn-danger btn-sm">Logout</a>
-    <!-- TODO: Mode logout button to mobile menu -->
     <div ng-include="'partials/student/waiting'"></div>
     <div style="margin: 10px auto;max-width: 300px;" class="form-group" ng-show="session.start">
         <button style="height: 170px;" class="btn btn-lg btn-danger btn-block" ng-disabled="disableClick" ng-click="sendAction(2)">I don't get it</button>
