--- a/app/views/partials/teacher/assessments.html
+++ b/app/views/partials/teacher/assessments.html
@@ -1,7 +1,7 @@
 <div ng-include="'partials/navbar'"></div>
 <div class="form-group session-new">
     <h4>Create an Assessment:</h4>
-    <input style="height: 30px;position: relative;top: 1px;" placeholder="Title" ng-model="newSessionTitle" />
+    <input style="height: 30px;position: relative;top: 1px;" placeholder="Name" ng-model="newAssessmentName" />
     <button class="btn btn-sm btn-info" ng-click="createAssessment()">Create</button>
 </div>
 <h4>Manage Assessments:</h4>
