--- a/app/views/partials/teacher/login.html
+++ b/app/views/partials/teacher/login.html
@@ -1,5 +1,5 @@
 <div ng-include="'partials/loginHeader'"></div>
-<div ng-controller="TeacherLoginCtrl">
+<div style="max-width: 400px; margin: 0 auto;" ng-controller="TeacherLoginCtrl">
     <form class="form-group" style="margin-top: 40px;" ng-submit="login()">
         <div class="form-group">
             <input class="form-control" ng-model="user.username" type="email" name="user" placeholder="Username" />
