--- a/app/views/partials/student/login.html
+++ b/app/views/partials/student/login.html
@@ -1,5 +1,5 @@
 <div ng-include="'partials/loginHeader'"></div>
-<div ng-controller="StudentLoginCtrl">
+<div style="max-width: 400px;  margin: 0 auto;" ng-controller="StudentLoginCtrl">
     <form class="form-group" style="margin-top: 40px;" ng-submit="login()">
         <div class="form-group">
             <input class="form-control" ng-model="user.studentId" type="text" name="studentId" placeholder="Student ID" />
