adding ability to add/remove assessments in session

--- a/app/views/partials/teacher/assessmentDetail.html
+++ b/app/views/partials/teacher/assessmentDetail.html
@@ -3,7 +3,7 @@
     <h4>{{assessment.name}}</h4>
 </div>
 <div class="form-group session-new">
-    <h4>Create an Question:</h4>
+    <h4>Create a Question:</h4>
     <input class="form-control" style="height: 30px;position: relative;top: 1px;" placeholder="Question text" ng-model="newQuestion.text" />
     <div class="form-group" ng-repeat="a in newQuestion.answers">
         <input class="form-inline" placeholder="Answer Text" ng-model="a.text">
