--- a/app/views/index.html
+++ b/app/views/index.html
@@ -65,6 +65,7 @@
         <script src="scripts/controllers/teacher/index.js"></script>
         <script src="scripts/controllers/teacher/login.js"></script>
         <script src="scripts/controllers/teacher/session.js"></script>
+        <script src="scripts/controllers/teacher/sessionDetail.js"></script>
         <script src="scripts/controllers/teacher/assessments.js"></script>
         <script src="scripts/controllers/teacher/assessmentDetail.js"></script>
         <script src="scripts/controllers/student/session.js"></script>
