--- a/app/views/index.html
+++ b/app/views/index.html
@@ -68,6 +68,7 @@
         <script src="scripts/controllers/teacher/sessionDetail.js"></script>
         <script src="scripts/controllers/teacher/assessments.js"></script>
         <script src="scripts/controllers/teacher/assessmentDetail.js"></script>
+        <script src="scripts/controllers/teacher/assessmentResults.js"></script>
         <script src="scripts/controllers/student/session.js"></script>
         <script src="scripts/controllers/student/login.js"></script>
         <script src="scripts/controllers/reports/index.js"></script>
