--- a/app/views/partials/teacher/assessmentResults.html
+++ b/app/views/partials/teacher/assessmentResults.html
@@ -1,11 +1,20 @@
+<div ng-include="'partials/navbar'"></div>
+
 <div ng-show="assessmentResults">
     <table class="table table-striped table-hover table-bordered table-responsive">
-        <tr ng-repeat="answer in assessment.question.answers" ng-class="{correct: answer.correct}">
+        <tr ng-repeat="answer in currentAssessment().question.answers" ng-class="{correct: answer.correct}">
             <td>{{ answer.text }}</td>
             <td>{{ assessmentResults[answer.text].percent() || 0 }}%</td>
         </tr>
     </table>
 </div>
+        
 <div ng-hide="assessmentResults">
     Waiting for Results...
 </div>
+        
+<div style="margin: 20px 0;" class="form-group btn-group pull-right">
+    <a ng-href="{{getBackUrl()}}" class="btn btn-sm btn-default">Return</a>
+    <div style="clear: both"></div>
+</div>
+<div style="clear:both;"></div>
